syntax = "proto2";
package org.roylance.yaas.models;

enum UserDeviceType {
    ANDROID = 0;
    IOS = 1;
    JAVASCRIPT = 2;
}

enum UserRole {
    NORMAL = 0;
    ADMIN = 1;
}

message UserDevice {
    optional string id = 1;
    optional UserDeviceType user_device_type = 2;
    optional string user_device_token = 3;
    optional int64 last_updated = 4;
    optional User user = 5;
}

message Image {
    optional string id = 1;
    optional string name = 2;
    optional string actual_image = 3;
}

message User {
    optional string id = 1;
    optional string user_name = 2;
    optional string password = 3;
    optional string display = 4;
    optional string first_name = 5;
    optional string last_name = 6;
    optional Image image = 7;
    repeated UserRole roles = 8;
}

message Token {
    optional string id = 1;
    optional string user_id = 2;
    optional int64 issued = 3;
    optional int64 expiration = 4;
}

message UIAuthentication {
    optional bool authenticated = 1;
    optional string token = 2;
    optional string user_name = 3;
    optional string display = 4;
    optional bool is_admin = 5;
}

message UIChangePassword {
    optional string user_name = 1;
    optional string old_password = 2;
    optional string new_password = 3;
}

message UIRequest {
    optional string token = 1;
    optional string content = 2;
}

message UIResponse {
    optional bool authenticated = 1;
    optional string error_message = 2;
    optional bool successful = 3;
    optional string content = 4;
    optional bool is_admin = 5;
    optional UIAuthentication user = 6;
    optional UIAuthentications users = 7;
}

message UIAuthentications {
    repeated UIAuthentication users = 1;
}