syntax = "proto3";
package org.roylance.yaas;

import "yaas_model.proto";

message RequestAction {
    org.roylance.yaas.UIYaasRequest request = 1;
    org.roylance.yaas.UIYaasResponse response = 2;
}

message AdminController {
    RequestAction change_password_for_user = 1;
    RequestAction get_all_users = 2;
    RequestAction is_user_admin = 3;
    RequestAction set_user_as_admin = 4;
    RequestAction remove_user_as_admin = 5;
    RequestAction delete_user = 6;
}

message AuthenticationController {
    RequestAction exists = 1;
    RequestAction login = 2;
    RequestAction authenticate = 3;
    RequestAction register = 4;
    RequestAction change_password = 5;
    RequestAction save = 6;
}

message UserDeviceController {
    RequestAction save = 1;
    RequestAction all = 2;
}